Refactor actions (#650)
* Refactor actions

* Fix some bugs

* Update master and modify mount action

* Clean up and make me happy

* Make sy_h(doge) happy

---------

Co-authored-by: MC_XiaoHei <xor7xiaohei@gmail.com>