@@ -7,7 +7,6 @@ import org.leavesmc.leaves.command.CommandArgument;
 import org.leavesmc.leaves.command.CommandArgumentResult;
 import org.leavesmc.leaves.command.CommandArgumentType;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Supplier;
 
@@ -19,8 +18,8 @@ public abstract class ServerTimerBotAction<E extends ServerTimerBotAction<E>> ex
 
     public ServerTimerBotAction(String name, CommandArgument argument, Supplier<E> creator) {
         super(name, argument, creator);
-        this.setSuggestion(0, Pair.of(Collections.singletonList("0"), "[TickDelay]"));
-        this.setSuggestion(1, Pair.of(Collections.singletonList("20"), "[TickInterval]"));
+        this.setSuggestion(0, Pair.of(List.of("0"), "[TickDelay]"));
+        this.setSuggestion(1, Pair.of(List.of("20"), "[TickInterval]"));
         this.setSuggestion(2, Pair.of(List.of("1", "-1"), "[DoNumber]"));
     }
 
