@@ -12,7 +12,7 @@ import org.leavesmc.leaves.command.CommandArgumentType;
 import org.leavesmc.leaves.entity.bot.actions.CraftUseItemOffhandAction;
 import org.leavesmc.leaves.event.bot.BotActionStopEvent;
 
-import java.util.Collections;
+import java.util.List;
 
 public class ServerUseItemOffhandAction extends ServerTimerBotAction<ServerUseItemOffhandAction> {
     private int useTick = -1;
@@ -20,7 +20,7 @@ public class ServerUseItemOffhandAction extends ServerTimerBotAction<ServerUseIt
 
     public ServerUseItemOffhandAction() {
         super("use_offhand", CommandArgument.of(CommandArgumentType.INTEGER, CommandArgumentType.INTEGER, CommandArgumentType.INTEGER, CommandArgumentType.INTEGER), ServerUseItemOffhandAction::new);
-        this.setSuggestion(3, Pair.of(Collections.singletonList("-1"), "[UseTick]"));
+        this.setSuggestion(3, Pair.of(List.of("-1"), "[UseTick]"));
     }
 
     @Override
