@@ -14,7 +14,7 @@ import org.leavesmc.leaves.command.CommandArgumentType;
 import org.leavesmc.leaves.entity.bot.actions.CraftUseItemToAction;
 import org.leavesmc.leaves.event.bot.BotActionStopEvent;
 
-import java.util.Collections;
+import java.util.List;
 
 public class ServerUseItemToAction extends ServerTimerBotAction<ServerUseItemToAction> {
     private int useTick = -1;
@@ -22,7 +22,7 @@ public class ServerUseItemToAction extends ServerTimerBotAction<ServerUseItemToA
 
     public ServerUseItemToAction() {
         super("use_to", CommandArgument.of(CommandArgumentType.INTEGER, CommandArgumentType.INTEGER, CommandArgumentType.INTEGER, CommandArgumentType.INTEGER), ServerUseItemToAction::new);
-        this.setSuggestion(3, Pair.of(Collections.singletonList("-1"), "[UseTick]"));
+        this.setSuggestion(3, Pair.of(List.of("-1"), "[UseTick]"));
     }
 
     @Override
